--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,5 +1,5 @@
 <main class="max-w-xl mx-auto mt-20 text-center">
-  <h1 class="text-3xl font-bold text-red-500 mb-4"><%= title %></h1>
-  <p class="text-lg text-gray-300"><%= message %></p>
+  <h1 class="text-3xl font-bold text-red-500 mb-4"><span class="font-paragon"><%= title %></span></h1>
+  <p class="text-lg text-gray-300"><span class="font-paragon"><%= message %></span></p>
   <a href="/" class="block mt-6 text-blue-400 hover:underline">Return to homepage</a>
 </main>
