--- a/views/reset-confirm.ejs
+++ b/views/reset-confirm.ejs
@@ -17,7 +17,7 @@
     <input type="hidden" name="token" value="<%= token %>">
 
     <div class="mb-4 relative">
-      <label for="password" class="block text-sm font-medium">New Password</label>
+      <label for="password" class="block text-sm font-medium"><span class="font-paragon">New Password</span></label>
       <input type="password" name="password" id="password" class="input w-full pr-10 toggle-password" required />
       <button type="button" class="toggle-button absolute inset-y-0 right-2 flex items-center text-sm text-gray-400" tabindex="-1">👁 Show</button>
     </div>
@@ -28,7 +28,7 @@
       <button type="button" class="toggle-button absolute inset-y-0 right-2 flex items-center text-sm text-gray-400" tabindex="-1">👁 Show</button>
     </div>
 
-    <button type="submit" class="btn btn-green w-full">Update Password</button>
+    <button type="submit" class="btn btn-green w-full"><span class="font-paragon">Update Password</span></button>
   </form>
 </div>
 
