--- a/views/account/character-export-status.ejs
+++ b/views/account/character-export-status.ejs
@@ -1,11 +1,11 @@
 <div class="container">
-  <h1 class="page-title">Export Status</h1>
+  <h1 class="page-title"><span class="font-paragon">Export Status</span></h1>
 
-  <div id="statusBox">Checking status...</div>
+  <div id="statusBox"><span class="font-paragon">Checking status...</span></div>
   <progress id="exportProgress" value="0" max="1" style="width: 100%; display: none; margin-top: 10px;"></progress>
 
   <div id="doneActions" style="display: none; margin-top: 20px;">
-    <a id="downloadLink" href="#" class="btn btn-success" download>Download Export</a>
+    <a id="downloadLink" href="#" class="btn btn-success" download><span class="font-paragon">Download Export</span></a>
   </div>
 </div>
 
