--- a/views/admin/edit_blacklist.ejs
+++ b/views/admin/edit_blacklist.ejs
@@ -1,9 +1,9 @@
-<h1>Edit Badge Blacklist</h1>
+<h1><span class="font-paragon">Edit Badge Blacklist</span></h1>
 <% if (typeof error !== 'undefined') { %>
   <div style="color: red; font-weight: bold; margin-bottom: 1em;"><%= error %></div>
 <% } %>
 <form action="/admin/blacklist" method="POST">
   <textarea name="blacklist" rows="20" style="width: 100%; font-family: monospace;"><%= blacklist.join('\n') %></textarea>
   <br><br>
-  <button type="submit">Save Blacklist</button>
+  <button type="submit" class="bg-green-600 hover:bg-green-700 text-white px-4 py-2 rounded"><span class="font-paragon">Save Blacklist</span></button>
 </form>
