--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,12 +1,12 @@
 <header class="bg-gray-800 p-4 flex justify-between items-center">
-  <h1 class="text-2xl font-bold"><%= config.siteName %></h1>
+  <h1 class="text-2xl font-bold"><span class="font-paragon"><%= config.siteName %></span></h1>
   <div>
     <% if (username) { %>
-      <span>Welcome, <%= username %> | <a href="/logout" class="ml-4 text-blue-400 hover:underline">Logout</a></span>
+      <span class="font-paragon">Welcome, <%= username %> | <a href="/logout" class="ml-4 text-blue-400 hover:underline">Logout</a></span>
     <% } else { %>
-      <a href="/login" class="text-blue-400 hover:underline">Login</a>
+      <a href="/login" class="text-blue-400 hover:underline"><span class="font-paragon">Login</span></a>
       <% if (config.allowRegistration) { %>
-        | <a href="/register" class="text-blue-400 hover:underline">Register</a>
+        | <a href="/register" class="text-blue-400 hover:underline"><span class="font-paragon">Register</span></a>
       <% } %>
     <% } %>
   </div>
